# api-tester

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  docker.yml  release.yml
app/: main.py
app/api/: dependencies.py
app/api/v1/: router.py
app/api/v1/endpoints/: benchmarks.py  history.py  providers.py  settings.py
app/core/: config.py
app/models/: api_settings.py  base.py  database.py  tables.py
app/repositories/: benchmark_repo.py  provider_repo.py
app/routes/: __init__.py  benchmarks.py  history.py  providers.py
app/schemas/: api_settings.py  benchmark.py
app/services/: benchmark_runner.py  llm_client.py  provider_service.py  speed_tests.py  statistics.py
app/static/: index.html
app/static/css/: style.css
app/static/js/: api.js  app.js  charts.js
docs/plans/: enhanced-metrics-plan.md
